--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#2E1D71",
-        "titleBar.activeBackground": "#40299E",
-        "titleBar.activeForeground": "#FAF9FD"
-    }
+    "python.pythonPath": "/Users/FW_Digital_Media/.local/share/virtualenvs/Blockchain-VBjYSPmk/bin/python"
 }
