Basic blockchain /chain and /mine working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#2E1D71",
         "titleBar.activeBackground": "#40299E",
         "titleBar.activeForeground": "#FAF9FD"
-    }
+    },
+    "python.pythonPath": "/Users/abigaylefranklin/.local/share/virtualenvs/Blockchain-anRy6Bwe/bin/python"
 }
