Caught up with lecture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "titleBar.activeBackground": "#40299E",
         "titleBar.activeForeground": "#FAF9FD"
     },
-    "python.pythonPath": "/Users/briandoyle/.local/share/virtualenvs/redo_bc_starter-LKhtEYjl/bin/python"
+    "python.pythonPath": "C:\\Users\\cheet\\.virtualenvs\\Intro-Python-I-0iyV9Uv_\\Scripts\\python.exe"
 }
