--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,3 +6,4 @@
     // },
     "python.pythonPath": "/Users/briandoyle/.local/share/virtualenvs/redo_bc_starter-LKhtEYjl/bin/python"
 }
+//initial commit
