--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,13 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+autopep8 = "*"
+pylint = "*"
 
 [packages]
 requests = ">=2.20.0"
 flask = ">=1.0.0"
+pip = "*"
 
 [requires]
 python_version = "3.7"
